crates/zizmor/tests/integration/snapshots/integration__snapshot__insecure_commands.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"insecure-commands.yml\")).args([\"--persona=auditor\"]).run()?"
---
error[insecure-commands]: execution of insecure workflow commands is enabled
  --> @@INPUT@@:11:5
   |
11 | /     env:
12 | |       ACTIONS_ALLOW_UNSECURE_COMMANDS: true
   | |___________________________________________^ insecure commands enabled here
   |
   = note: audit confidence → High

error[insecure-commands]: execution of insecure workflow commands is enabled
  --> @@INPUT@@:26:9
   |
26 |         env: ${{ matrix.env }}
   |         ^^^^^^^^^^^^^^^^^^^^^^ non-static environment may contain ACTIONS_ALLOW_UNSECURE_COMMANDS
   |
   = note: audit confidence → Low

2 findings: 0 unknown, 0 informational, 0 low, 0 medium, 2 high
